--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -13,6 +13,9 @@ footer {
         display: flex;
         justify-content: center;
         align-items: center;
+        p {
+            margin-top: 20px;
+        }
     }
 
 }
