--- a/src/app/components/task-management/task-management.component.html
+++ b/src/app/components/task-management/task-management.component.html
@@ -1,17 +1,20 @@
-<div>
+<div class="task">
     <div class="task-section">
         <form class="example-form row" [formGroup]="taskForm"  (ngSubmit)="createTask()">
-            <mat-form-field class="col-12 example-full-width" appearance="fill">
+            <mat-form-field class="col-12" appearance="fill">
                 <input matInput placeholder="Title" formControlName="title">
             </mat-form-field>
 
-            <mat-form-field class="col-12 example-full-width" appearance="fill">
+            <mat-form-field class="col-12" appearance="fill">
                 <mat-label>Description</mat-label>
                 <textarea matInput placeholder="Enter task description" formControlName="description"></textarea>
             </mat-form-field>
             <button mat-raised-button color="primary" type="submit">Create</button>
 
         </form>
+    </div>
+    <div class="preview">
+        <app-task-preview></app-task-preview>
     </div>
 
 
