--- a/src/app/components/task-management/task-management.component.scss
+++ b/src/app/components/task-management/task-management.component.scss
@@ -1,12 +1,16 @@
 @import '../../variables.scss';
 
-div {
+.task {
     margin: 60px 0px;
     height: 100vh;
     width: 100%;
+    display: flex;
+    flex-direction: row;
     background-color: $color-gray-background;
 
     .task-section {
+        width: 40%;
+        
        .row {
         padding: 100px;
         width: 150px;
@@ -18,5 +22,9 @@ div {
             background-color: $color-primary;
         }
        }
+    }
+    .preview {
+        width: 60%;
+        padding: 100px;
     }
 }
