--- a/src/app/components/task-management/task-management.component.html
+++ b/src/app/components/task-management/task-management.component.html
@@ -14,7 +14,7 @@
         </form>
     </div>
     <div class="preview">
-        <app-task-preview></app-task-preview>
+        <app-task-preview [items]="tasks"></app-task-preview>
     </div>
 
 
