--- a/src/app/components/task-management/task-preview/task-preview.component.html
+++ b/src/app/components/task-management/task-preview/task-preview.component.html
@@ -12,7 +12,8 @@
 
     <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef=""> Edit icon</td>
+        <td mat-cell *matCellDef=""><mat-icon aria-hidden="false" aria-label="Edit" fontIcon="edit"></mat-icon>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
