--- a/src/app/components/task-management/task-preview/task-preview.component.html
+++ b/src/app/components/task-management/task-preview/task-preview.component.html
@@ -2,17 +2,21 @@
 
     <ng-container matColumnDef="color">
         <th mat-header-cell *matHeaderCellDef> Color </th>
-        <td mat-cell *matCellDef="let element"> <mat-icon [ngStyle]="{'color': element.color}" aria-hidden="false" aria-label="Edit" fontIcon="circle"></mat-icon> </td>
+        <td mat-cell *matCellDef="let element">
+            <mat-icon [ngStyle]="{'color': element.color}" aria-hidden="false" aria-label="Edit" fontIcon="circle">
+            </mat-icon>
+        </td>
     </ng-container>
 
     <ng-container matColumnDef="title">
         <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+        <td mat-cell *matCellDef="let element" matTooltip={{element.title}}> {{element.title | filterString }} </td>
     </ng-container>
 
     <ng-container matColumnDef="edit">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef=""><mat-icon [ngStyle]="{'color':'#0982C6'}"  aria-hidden="false" aria-label="Edit" fontIcon="edit"></mat-icon>
+        <td mat-cell *matCellDef="">
+            <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="edit"></mat-icon>
         </td>
     </ng-container>
 
