--- a/src/app/components/task-management/task-preview/task-preview.component.html
+++ b/src/app/components/task-management/task-preview/task-preview.component.html
@@ -13,10 +13,18 @@
         <td mat-cell *matCellDef="let element" matTooltip={{element.title}}> {{element.title | filterString }} </td>
     </ng-container>
 
-    <ng-container matColumnDef="edit">
+    <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
         <td mat-cell *matCellDef="">
             <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="edit"></mat-icon>
+        </td>
+    </ng-container>
+
+    <ng-container matColumnDef="details">
+        <th mat-header-cell *matHeaderCellDef> Details </th>
+        <td mat-cell *matCellDef="let element">
+            <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="description" (click)="openDetails(element)">
+            </mat-icon>
         </td>
     </ng-container>
 
