--- a/src/app/components/task-management/task-preview/task-preview.component.html
+++ b/src/app/components/task-management/task-preview/task-preview.component.html
@@ -1,5 +1,13 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-
+<div class="row search">
+    <mat-form-field color="primary">
+        <mat-label>Enter text to search</mat-label>
+        <input matInput type="text" [(ngModel)]="filterTerm">
+        <button *ngIf="filterTerm" matSuffix mat-icon-button aria-label="Clear" (click)="filterTerm=''">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-form-field>
+</div>
+<table mat-table [dataSource]="dataSource | filter: filterTerm" c lass="mat-elevation-z8">
     <ng-container matColumnDef="color">
         <th mat-header-cell *matHeaderCellDef> Color </th>
         <td mat-cell *matCellDef="let element">
@@ -23,7 +31,8 @@
     <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> Details </th>
         <td mat-cell *matCellDef="let element">
-            <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="description" (click)="openDetails(element)">
+            <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="description"
+                (click)="openDetails(element)">
             </mat-icon>
         </td>
     </ng-container>
