--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
 <app-header></app-header>
-  <app-task-management></app-task-management>
+<div class="container">
+
+  <app-task-add></app-task-add>
+
+  <app-task-list></app-task-list>
+
+</div>
 <app-footer></app-footer>
