--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,15 +7,22 @@ footer {
     height: 60px;
     color: $color-gray-light;
     background-color: $color-gray;
-    font-size: 14px;
-
+    font-size: 12px;
+    
     div {
         display: flex;
         justify-content: center;
         align-items: center;
+        padding: 0 20px;
         p {
             margin-top: 20px;
         }
     }
 
 }
+
+@media screen and (min-width: 992px) {
+    footer {
+      font-size: 14px;
+    }
+  }
