--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -7,7 +7,7 @@
         </button>
       </mat-form-field>
 </div>
-<table mat-table [dataSource]="dataSource | filter: filterTerm" c lass="mat-elevation-z8">
+<table mat-table [dataSource]="items$ | filter: filterTerm" class="mat-elevation-z8">
     <ng-container matColumnDef="color">
         <th mat-header-cell *matHeaderCellDef> Color </th>
         <td mat-cell *matCellDef="let element">
