--- a/src/app/components/task-add/task-add.component.html
+++ b/src/app/components/task-add/task-add.component.html
@@ -1,6 +1,10 @@
 <form class="row" [formGroup]="taskForm" (ngSubmit)="createTask()">
     <mat-form-field class="col-12" appearance="fill">
+        <mat-label>Title</mat-label>
         <input matInput placeholder="Title" formControlName="title" required>
+        <mat-error *ngIf="title?.hasError('required')">
+            Title is required
+        </mat-error>
     </mat-form-field>
 
     <mat-form-field class="col-12" appearance="fill">
