--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -20,6 +20,16 @@
             <th mat-header-cell *matHeaderCellDef> Title </th>
             <td mat-cell *matCellDef="let element" matTooltip={{element.title}}> {{element.title | filterString }} </td>
         </ng-container>
+
+        <ng-container matColumnDef="priority">
+            <th mat-header-cell *matHeaderCellDef> Priority </th>
+            <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.dueDate | date: 'mediumDate'}} </td>
+        </ng-container>
     
         <ng-container matColumnDef="update">
             <th mat-header-cell *matHeaderCellDef> Edit </th>
