--- a/src/app/components/task-list/task-list.component.scss
+++ b/src/app/components/task-list/task-list.component.scss
@@ -1,9 +1,13 @@
-table {
+.table-wrapper {
   width: 80vw;
+
+  table {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 992px) {
-  table {
+  .table-wrapper {
     width: 50vw;
   }
 }
