--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -34,8 +34,8 @@
 
     <ng-container matColumnDef="update">
         <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="">
-            <button mat-icon-button>
+        <td mat-cell *matCellDef="let element">
+            <button mat-icon-button (click)="openEditDialog(element)">
                 <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="edit">
                 </mat-icon>
             </button>
@@ -45,7 +45,7 @@
     <ng-container matColumnDef="details">
         <th mat-header-cell *matHeaderCellDef> Details </th>
         <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="openDialog(element)">
+            <button mat-icon-button (click)="openDetailsDialog(element)">
                 <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Details" fontIcon="description"></mat-icon>
             </button>
         </td>
