--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -1,8 +1,6 @@
-$font-lato-regular: 'Lato', sans-serif;
-
 //Colors
 $color-white: #ffffff;
 $color-primary: #0982C6;
 $color-gray: #222d32;
 $color-gray-light: #939393;
-$color-gray-background: #eceff1
+$color-gray-background: #eceff1;
