--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,13 +5,11 @@ header {
     width: 100%;
     position: fixed;
     margin: 0;
-    z-index:1;
+    z-index: 1;
     top: -10px;
-    box-shadow: 0 -6px 10px 5px rgba(0,0,0,0.5);
-
+    box-shadow: 0 -6px 10px 5px rgba(0, 0, 0, 0.5);
 
     ul {
         list-style: none;
     }
-
 }
