--- a/src/app/components/task-details/task-details.component.html
+++ b/src/app/components/task-details/task-details.component.html
@@ -1,17 +1,18 @@
-<h1 >{{data.title}}</h1>
-  <ul>
-    <li>
-      Description: 
-      <span >{{data.description}}</span> 
-    </li>
-    <li>
-      Priority: 
-      <span>{{data.priority}}</span> 
-    </li>
-    <li>
-      Color: <span> {{data.color}} </span> <mat-icon [ngStyle]="{'color': data.color }" aria-hidden="false" aria-label="color" fontIcon="circle"></mat-icon>
-    </li>
-    <li>
-      Due date: <span>{{data.dueDate | date: 'fullDate'}}</span> 
-    </li>
-  </ul>
+<h1>{{data.title}}</h1>
+<ul>
+  <li>
+    Description:
+    <span>{{data.description}}</span>
+  </li>
+  <li>
+    Priority:
+    <span>{{data.priority}}</span>
+  </li>
+  <li>
+    Color: <span> {{data.color}} </span>
+    <mat-icon [ngStyle]="{'color': data.color }" aria-hidden="false" aria-label="color" fontIcon="circle"></mat-icon>
+  </li>
+  <li>
+    Due date: <span>{{data.dueDate | date: 'fullDate'}}</span>
+  </li>
+</ul>
