--- a/src/app/components/task-list/task-list.component.html
+++ b/src/app/components/task-list/task-list.component.html
@@ -7,56 +7,57 @@
         </button>
     </mat-form-field>
 </div>
-<div  class="mat-elevation-z8 table-wrapper">
-<table mat-table [dataSource]="items">
-    <ng-container matColumnDef="color">
-        <th mat-header-cell *matHeaderCellDef> Color </th>
-        <td mat-cell *matCellDef="let element">
-            <mat-icon [ngStyle]="{'color': element.color}" aria-hidden="false" aria-label="Edit" fontIcon="circle">
-            </mat-icon>
-        </td>
-    </ng-container>
 
-    <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef> Title </th>
-        <td mat-cell *matCellDef="let element" matTooltip={{element.title}}> {{element.title | filterString }} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="priority">
-        <th mat-header-cell *matHeaderCellDef> Priority </th>
-        <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="dueDate">
-        <th mat-header-cell *matHeaderCellDef> Date </th>
-        <td mat-cell *matCellDef="let element"> {{element.dueDate | date: 'mediumDate'}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="update">
-        <th mat-header-cell *matHeaderCellDef> Edit </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="openEditDialog(element)">
-                <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="edit">
+<div class="mat-elevation-z8 table-wrapper">
+    <table mat-table [dataSource]="items">
+        <ng-container matColumnDef="color">
+            <th mat-header-cell *matHeaderCellDef> Color </th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon [ngStyle]="{'color': element.color}" aria-hidden="false" aria-label="Edit" fontIcon="circle">
                 </mat-icon>
-            </button>
-        </td>
-    </ng-container>
+            </td>
+        </ng-container>
 
-    <ng-container matColumnDef="details">
-        <th mat-header-cell *matHeaderCellDef> Details </th>
-        <td mat-cell *matCellDef="let element">
-            <button mat-icon-button (click)="openDetailsDialog(element)">
-                <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Details" fontIcon="description"></mat-icon>
-            </button>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="title">
+            <th mat-header-cell *matHeaderCellDef> Title </th>
+            <td mat-cell *matCellDef="let element" matTooltip={{element.title}}> {{element.title | filterString }} </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-</table>
+        <ng-container matColumnDef="priority">
+            <th mat-header-cell *matHeaderCellDef> Priority </th>
+            <td mat-cell *matCellDef="let element"> {{element.priority}} </td>
+        </ng-container>
 
-<mat-paginator [pageSizeOptions]="[5, 10, 20, 50, 100]"
-                 showFirstLastButtons
-                 aria-label="Select number of tasks per page">
-  </mat-paginator>
+        <ng-container matColumnDef="dueDate">
+            <th mat-header-cell *matHeaderCellDef> Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.dueDate | date: 'mediumDate'}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="update">
+            <th mat-header-cell *matHeaderCellDef> Edit </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="openEditDialog(element)">
+                    <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Edit" fontIcon="edit">
+                    </mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <ng-container matColumnDef="details">
+            <th mat-header-cell *matHeaderCellDef> Details </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button (click)="openDetailsDialog(element)">
+                    <mat-icon [ngStyle]="{'color':'#0982C6'}" aria-hidden="false" aria-label="Details"
+                        fontIcon="description"></mat-icon>
+                </button>
+            </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <mat-paginator [pageSizeOptions]="[5, 10, 20, 50, 100]" showFirstLastButtons
+        aria-label="Select number of tasks per page">
+    </mat-paginator>
 </div>
