--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
 
 body {
-    margin: 0px;
+    margin: 0;
     font-family: 'Lato', sans-serif;
 }
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+html,
+body {
+    height: 100%;
+}
